Actualización de Proyecto final

--- a/trabajo_final_bootstrap/fechas.html
+++ b/trabajo_final_bootstrap/fechas.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="collpasibleNavar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="registro.html">Conviértete en afiliado</a>
+        <a class="nav-link" href="contacto.php">Conviértete en afiliado</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="iniciosecc.html">Su cuenta</a>
@@ -54,9 +54,9 @@
       </ul>
       <hr class=" d-sm-nome">
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-10 cen">
       <div class="row">
-        <h2 class="titulo">fechas especiales</h2>
+        <iframe src="https://calendar.google.com/calendar/embed?height=564&amp;wkst=1&amp;bgcolor=%23E4C441&amp;ctz=America%2FBogota&amp;src=cWZoZnNjaWszcXIwbDU3MTkzdHM2NmJ0Y2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161" style="border:solid 1px #777" width="1000" height="564" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
   </div>
@@ -109,7 +109,7 @@
           <a href="iniciosecc.html" class="text-white">Su cuenta</a>
         </p>
         <p>
-          <a href="registro.html" class="text-white">Conviértete en afiliado</a>
+          <a href="contacto.php" class="text-white">Conviértete en afiliado</a>
         </p>
       </div>
       <!-- Grid column -->
