--- a/trabajo_final_bootstrap/gastronomia.html
+++ b/trabajo_final_bootstrap/gastronomia.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="collpasibleNavar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="registro.html">Conviértete en afiliado</a>
+        <a class="nav-link" href="contacto.php">Conviértete en afiliado</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="iniciosecc.html">Su cuenta</a>
@@ -227,7 +227,7 @@
           <a href="iniciosecc.html" class="text-white">Su cuenta</a>
         </p>
         <p>
-          <a href="#registro.html" class="text-white">Conviértete en afiliado</a>
+          <a href="contacto.php" class="text-white">Conviértete en afiliado</a>
         </p>
       </div>
       <!-- Grid column -->
