--- a/trabajo_final_bootstrap/galeria.html
+++ b/trabajo_final_bootstrap/galeria.html
@@ -10,6 +10,14 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="dist/css/bootstrap.css">
 <link rel="stylesheet" href="scss/css/estilos.css">
+<!-- styles -->
+<link rel="stylesheet" href="assets/css/fancybox/jquery.fancybox.css">
+<link href="assets/css/bootstrap.css" rel="stylesheet" />
+<link href="assets/css/bootstrap-theme.css" rel="stylesheet" />
+<link rel="stylesheet" href="assets/css/slippry.css">
+<link href="assets/css/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="assets/color/default.css">
+<script src="assets/js/modernizr.custom.js"></script>
 <title>Trabajo Final</title>
 </head>
 <body>
@@ -55,11 +63,46 @@
       </ul>
       <hr class=" d-sm-nome">
     </div>
-    <div class="col-sm-6">
-      <div class="row">
-        <h2 class="titulo">Galería</h2>
+    <div class="col-sm-10">
+      <div class="container">
+        <div class="row">
+          
+            <div class="heading">
+              <h3><span>Nuestra Galería</span></h3>
+            </div>
+            <div class="sub-heading">
+              <p>
+                Nuestro restaurante cuenta no solo con gran variedad gastronomica, sino tabién con múltiples eventos.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <ul class="grid effect" id="grid">
+              <li>
+                <a class="fancybox" data-fancybox-group="gallery" title="Portfolio name" href="assets/img/portfolio/1.jpg">
+                  <img src="assets/img/portfolio/1.jpg" alt="" />
+                </a>
+              </li>
+              <li><a href="assets/img/portfolio/1.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/1.jpg
+                " alt="" /></a></li>
+              <li><a href="assets/img/portfolio/3.jpg" class="fancybox" data-fancybox-group="gallery"  title="Portfolio name"><img src="assets/img/portfolio/3.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/4.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/4.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/5.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/5.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/6.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/6.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/7.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/7.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/8.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/8.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/9.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/9.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/10.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/10.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/11.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/11.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/12.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/12.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/13.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/13.jpg" alt="" /></a></li>
+              <li><a href="assets/img/portfolio/14.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/14.jpg" alt="" /></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
   </div>
 </div>
 
@@ -68,13 +111,14 @@
   <!-- Footer Links -->
   <div class="container text-center text-md-left mt-5">
     <!-- Grid row -->
+    <br><br>
     <div class="row mt-3">
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-white" >
 
         <!-- Content -->
-        <h6 class="font-weight-bold">Nombre de empresa</h6>
+        <h6 class="font-weight-bold">NOMBRE DE LA EMPRESA</h6>
         <hr class="bg-warning accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>Descripsión pequeña de la empresa. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
@@ -85,7 +129,7 @@
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-white">
 
         <!-- Links -->
-        <h6 class=" font-weight-bold">Servicios</h6>
+        <h6 class=" font-weight-bold">SERVICIOS</h6>
         <hr class="bg-warning accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
           <a href="galeria.html" class="text-white">Galería</a>
@@ -147,7 +191,49 @@
 
 </footer>
 <!-- Footer -->
+<!-- javascript -->
+<script src="assets/js/jquery-1.9.1.min.js"></script>
+<script src="assets/js/jquery.easing.js"></script>
+<script src="assets/js/classie.js"></script>
+<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/slippry.min.js"></script>
+<script src="assets/js/nagging-menu.js"></script>
+<script src="assets/js/jquery.nav.js"></script>
+<script src="assets/js/jquery.scrollTo.js"></script>
+<script src="assets/js/jquery.fancybox.pack.js"></script>
+<script src="assets/js/jquery.fancybox-media.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/imagesloaded.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+<script src="assets/js/AnimOnScroll.js"></script>
+<script>
+  new AnimOnScroll(document.getElementById('grid'), {
+    minDuration: 0.4,
+    maxDuration: 0.7,
+    viewportFactor: 0.2
+  });
+</script>
+<script>
+  $(document).ready(function() {
+    $('#slippry-slider').slippry(
+      defaults = {
+        transition: 'vertical',
+        useCSS: true,
+        speed: 5000,
+        pause: 3000,
+        initSingle: false,
+        auto: true,
+        preload: 'visible',
+        pager: false,
+      }
 
+    )
+  });
+</script>
+
+<script src="assets/js/custom.js"></script>
+<script src="contactform/contactform.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
